Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1159

Avro-C: read_union_value does not check discriminant

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.7.1
    • 1.7.2
    • c

    Description

      Currently read_union_value() in value-read.c does not check if the discriminant it reads is valid in any way.

      This can lead to SEGFAULTs after the use of avro_value_set_branch() as read_value() will attempt to read beyond or behind our dataum in memory.

      Attachments

        1. union_discriminant_check.patch
          0.9 kB
          Lucas Martin-King

        Activity

          People

            Unassigned Unassigned
            lmartinking Lucas Martin-King
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: