AVRO-1159. C: Check union discriminant in avro_value_read.

Contributed by Lucas Martin-King.


git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1384543 13f79535-47bb-0310-9956-ffa450edef68